--- a/idk/index.html
+++ b/idk/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>i have no passion</title>
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>0 goals in life</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">idk</a></h3>
+  </div>
+  <div class="content">
+	  violins are funky
+</div>
+  <div class="footer">
+    <h4>About Me | Contact | Copyright 2023</h4>
+  </div>
+</div>
+</body>
+</html>
