--- a/idk/index.html
+++ b/idk/index.html
@@ -12,7 +12,7 @@
   	<h1>0 goals in life</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">idk</a></h3>
+    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Violin</a></h3>
   </div>
   <div class="content">
 	  violins are funky
