--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Maddie Gibson's ECS Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="idk/index.html">Home</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="idk/index.html">Violin</a></h3>
   </div>
   <div class="content">
 	  Hello World!
