--- a/idk/index.html
+++ b/idk/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>0 goals in life</h1>
+  	<h1>Violins Are Cool</h1>
   </div>
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Violin</a></h3>
