--- a/idk/index.html
+++ b/idk/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>i have no passion</title>
+	<title>Violins Are Pretty Cool</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
