--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,7 +15,13 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../idk/index.html">Violin</a></h3>
   </div>
   <div class="content">
-	  My ECS Projects
+	  <h3>ESC Projects Links</h3>
+	  <ul>
+		  <li>Typing Test Results </li>
+		  <li>AI Project | <a href="aiproject.pdf">PDF</a> | <a href="aiproject.pptx">PPTX</a> </li>
+		  <li>Coding Projects </li>
+		  <li>Certifications </li>
+	  </ul>
 </div>
   <div class="footer">
     <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:madegibs9690@granitesd.org">Contact</a> | Copyright 2023</h4>
