--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@
   <div class="content">
     <h3>Skills</h3>
     <ol>
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
+      <li>Violin</li>
+      <li>Writing</li>
+      <li>Reading</li>
 </ol>
     
     
