--- a/ecs/index.html
+++ b/ecs/index.html
@@ -21,7 +21,7 @@
 		  <li>AI Project | <a href="aiproject.pdf">PDF</a> | <a href="aiproject.pptx">PPTX</a> </li>
 		  <li>Coding Project: Etch-A-Sketch | <a href="https://github.com/myportfolio/blob/main/ecs/EtchASketch">Code</a></li>
 		  <li>Coding Project: Timeline | <a href="https://github.com/myportfolio/blob/main/ecs/Timeline">Code</a></li>
-		  <li>Coding Project: Brick Break | <a href="https://github.com/myportfolio/blob/main/ecs/Brick Break">Code</a></li>
+		  <li>Coding Project: Brick Break | <a href="https://github.com/madegibs/myportfolio/blob/main/ecs/brickbreak1/brickbreak1.pde">Code</a></li>
 		  <li>Certifications </li>
 	  </ul>
 </div>
